src/test/deca/syntax/invalid/lexer/chaine_lex-lex.corr
STRING: [@0,201:216='"chaine normale"',<49>,13:0]
STRING: [@1,218:229='"aabb//aabb"',<49>,14:0]
STRING: [@2,231:242='"/*egegeg*/"',<49>,15:0]
STRING: [@3,244:255='"aabb//aabb"',<49>,16:0]
STRING: [@4,257:267='"print asm"',<49>,17:0]
STRING: [@5,269:275='"rgrdg"',<49>,18:0]
STRING: [@6,277:279='"'"',<49>,19:0]
STRING: [@7,281:284='"\""',<49>,20:0]
STRING: [@8,286:289='"\\"',<49>,21:0]
STRING: [@9,291:296='"\\\""',<49>,22:0]
MULTI_LINE_STRING: [@10,298:304='"\\\n\""',<50>,23:0]
MULTI_LINE_STRING: [@11,306:318='"gggggg\ngggg"',<50>,25:0]
